--- a/apple-pie/styles/style.css
+++ b/apple-pie/styles/style.css
@@ -15,10 +15,49 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
   font-weight: lighter;
 }
 
-/*  Set the font */
 body {
   font-family: "Helvetica", sans-serif;
 }
 
-/* STYLES */
-/* Write your CSS below */
+h1 {
+  background: url(/apple-pie/images/apple-pie.jpg);
+  background-size: cover;
+  color: white;
+  font-size: 70px;
+  text-align: center;
+  padding-top: 305px;
+  padding-bottom: 305px;
+}
+
+p {
+  padding: 75px 75px;
+  font-size: 100%;
+  text-align: center;
+}
+
+#introduction, #ingredients, #directions {
+  padding-left: 200px;
+  padding-right: 200px;
+}
+
+hr {
+  width: 65%;
+}
+
+section img {
+  width: 50%;
+  display: block;
+  margin: 20px auto;
+}
+
+ol { 
+  list-style: none;
+}
+
+ol > li {  
+  counter-increment: listcounter;
+}
+
+ol > li::before {
+  content: counter(listcounter) ")";
+}
